# Transformer-peptide-RT-prediction

./: .gitignore  PeptideRT_Decoder_Eval.ipynb  PeptideRT_Decoder_Train.ipynb  PeptideRT_Encoder_Eval.ipynb  PeptideRT_Encoder_Train.ipynb  PeptideRT_Eval.ipynb  PeptideRT_Train.ipynb  README.md  eval__cross_test.ipynb  eval__cysty.ipynb  eval__misc_dia.ipynb  eval__misc_dia_masked.ipynb  pyproject.toml  train__cysty.ipynb  train__misc_dia.ipynb  train__misc_dia_masked.ipynb
data/: cysty.txt  cysty_test.txt  krokhin.txt  misc_dia.txt  mouse.txt  petritis.txt  serum.txt
decoder_notebooks/: eval__cysty.ipynb  eval__misc_dia.ipynb  train__cysty.ipynb  train__misc_dia.ipynb
docs/: UMB_koncepcja.md  umb
encoder_notebooks/: eval__cysty.ipynb  eval__cysty_cross_test.ipynb  eval__misc_dia.ipynb  eval__misc_dia_masked.ipynb  eval__mouse_cross_test.ipynb  eval__petritis_cross_test.ipynb  train__cysty.ipynb  train__misc_dia.ipynb  train__misc_dia_masked.ipynb
models/: cysty.pt  rt_decoder_model_cysty_64_4_4_5.pt  rt_decoder_model_misc_dia_64_4_4_5.pt  rt_decoder_model_misc_dia_64_4_4_5_150_2.pt  rt_decoder_model_mouse_64_4_4_5.pt  rt_encoder_model_cysty_64_4_5.pt  rt_encoder_model_misc_dia_64_4_5.pt  rt_encoder_model_misc_dia_64_4_5_300_2.pt  rt_encoder_model_mouse_64_4_5.pt
models/hpo/cysty/: best_config.json  best_encoder.pt
models/hpo/misc_dia/: best_config.json
models/hpo_decoder/cysty/: best_config.json
models/hpo_decoder/misc_dia/: best_config.json  (+1 more)
src/: dataset.py  hpo.py  hpo_decoder.py  hpo_encoder.py  model.py  rt_transformer.py  tokenizer.py  utils.py
(+1 files in other folders)
